fix incorrect flag list sorting